SRP MapCanvas -> MapRenderer and MapState Classes